# CrazyflieControllers

./: .gitignore  .gitmodules  KeyFrameTrajectory.txt  Readme.md  apt_dependencies.txt  requirements.txt
agent/: CMakeLists.txt  package.xml
agent/launch/: agent.launch.py
agent/scripts/: agent.py
crazyflie_controllers/: CMakeLists.txt  package.xml
crazyflie_controllers/include/crazyflie_controllers/: TinyMPC_controller.h  attitude_pid_controller.h  position_mpc_controller.h  position_pid_controller.h
crazyflie_controllers/include/crazyflie_controllers/control_utils/: ModelPredictiveController.h  pid.h
crazyflie_controllers/include/crazyflie_controllers/control_utils/problem_data/: quadrotor_20hz_params_crazyflie.hpp
crazyflie_controllers/launch/: TinyMPC_controller_gdb.launch.py  attitude_pid_controller.launch.py  position_mpc_controller.launch.py  position_mpc_controller_gdb.launch.py  position_pid_controller.launch.py  position_pid_controller_old.launch.py  test_controller.launch.py
crazyflie_controllers/scripts/: attitude_pid_controller.py  test_controller.py
crazyflie_controllers/src/: TinyMPC_controller.cpp  attitude_pid_controller.cpp  attitude_pid_controller_old.cpp  position_mpc_controller.cpp  position_pid_controller.cpp
crazyflie_controllers/src/control_utils/: ModelPredictiveController.cpp  pid.cpp
crazyflie_controllers/src/tinympc/problem_data/: quadrotor_100hz_params.hpp  quadrotor_20hz_params.hpp
crazyflie_detectors/: CMakeLists.txt  package.xml
crazyflie_detectors/launch/: camera_target_publisher.launch.py  sim_target_publisher.launch.py  target_publisher.launch.py
crazyflie_detectors/scripts/: realife_target_publisher.py  sim_target_publisher.py  target_publisher.py
crazyflie_launch/: package.xml  setup.cfg  setup.py
crazyflie_launch/launch/: real.launch.py  simulation.launch.py
crazyflie_localization/: CMakeLists.txt  package.xml
crazyflie_localization/config/: camera.rviz  ekf.yaml  esp32_intrinsics.yaml  orb3_esp32_640_480_camera.yaml  orb3_esp32_camera.yaml  orb3_webots_camera.yaml  webots_camera_intrinsics.yaml
crazyflie_localization/crazyflie_localization/: camera_aligner.py  ekf_wrapper.py
crazyflie_localization/include/crazyflie_localization/: tf_broadcaster_node.h  visual_odometry_node.h
crazyflie_localization/include/crazyflie_localization/my_datastructures/: map.h  map_point.h
crazyflie_localization/include/crazyflie_localization/my_geometry/: camera.h  matrix_manipulation.h
crazyflie_localization/include/crazyflie_localization/my_utils/: opencv_functions.h  ros_conversions.h
crazyflie_localization/include/crazyflie_localization/my_visual_odometry/: ORB_tracker.h  frame.h  matching_and_tracking.h  pose_estimator.h  visual_odometry.h
crazyflie_localization/include/crazyflie_localization/utils/: pose_estimator.h  visual_odometry.h
crazyflie_localization/launch/: orb3_visual_odometry_real.launch.py  orb3_visual_odometry_sim.launch.py  visual_odometry_real.launch.py  visual_odometry_sim.launch.py
crazyflie_localization/rviz/: visual_odometry.rviz
crazyflie_localization/scripts/: pose_from_imu.py
crazyflie_localization/src/: tf_broadcaster_node.cpp  visual_odomerty_node.cpp  visual_odometry_node.cpp
crazyflie_localization/src/my_datastructures/: map.cpp  map_point.cpp
crazyflie_localization/src/my_geometry/: camera.cpp  matrix_manipulation.cpp
crazyflie_localization/src/my_utils/: opencv_functions.cpp  ros_conversions.cpp
crazyflie_localization/src/my_visual_odometry/: ORB_tracker.cpp  frame.cpp  matching_and_tracking.cpp  pose_estimator.cpp  visual_odometry.cpp
crazyflie_localization/src/utils/: ORB_tracker.cpp  pose_estimator.cpp  visual_odometry.cpp
crazyflie_msgs/: CMakeLists.txt  package.xml
crazyflie_msgs/action/: Trajectory.action
crazyflie_msgs/msg/: AttitudeCommand.msg  MotorVel.msg  PidTuner.msg
crazyflie_ros2_driver/: package.xml  setup.cfg  setup.py
crazyflie_ros2_driver/crazyflie_ros2_driver/: calibration_script.py  crazyflie_driver.py  crazyflie_hw_attitude_driver.py  crazyflie_hw_driver.py  crazyflie_hw_motor_vel_driver.py  crazyflie_webots_driver.py  esp32_driver.py
crazyflie_ros2_driver/crazyflie_ros2_driver/crazyradio/: __init__.py  base_control_node.py  cached_cf_factory.py  motor_control.py  tools.py
crazyflie_ros2_driver/images/: calibration_result.txt  dim.txt
crazyflie_ros2_driver/launch/: crazyflie_hw_driver.launch.py  crazyflie_ros2_driver.launch.py  crazyflie_webots_driver.launch.py  crazyflie_webots_driver_daniel.launch.py
crazyflie_ros2_driver/resource/: ModifiedCrazyflie.proto  crazyflie.urdf  crazyflie_model.urdf
crazyflie_ros2_driver/worlds/: .complete_apartment.wbproj  .crazyflie_arena.wbproj  .crazyflie_arena_at.wbproj  .crazyflie_arena_atag.wbproj  complete_apartment.wbt  crazyflie_arena.wbt  crazyflie_arena_at.wbt  crazyflie_arena_atag.wbt  crazyflie_arena_daniel.wbt
crazyflie_teleop/: package.xml  setup.cfg  setup.py
crazyflie_teleop/crazyflie_teleop/: cmd_vel_to_attitude.py  joystick_to_attitude.py
crazyflie_teleop/launch/: joystick.launch.py
docs/: crazyflie_notes.md
tinympc_ros2/: CMakeLists.txt  package.xml
